--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
     <!-- daisy ui and tailwind link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- css file link -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <section class="home">
 
+    </section>
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+        
+    </section>
 </body>
 
 </html>
